--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="login_button_login">登录</string>
     <string name="login_textview_forgetpassword">忘记密码？</string>
     <string name="login_textview_register">注册账号</string>
-
+    <string name="login_success">登陆成功</string>
     <!-- auth.register -->
     <string name="register_edittext_phone">手机号码</string>
     <string name="register_edittext_code">验证码</string>
