add the anti lost check function

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -292,7 +292,13 @@
     <string name="connecting">正在连接</string>
     <string name="alert">告警</string>
     <string name="stop_alert">停止告警</string>
+    <string name="prompt">左滑删除</string>
     <!-- device list -->
     <string name="devicelist">设备列表</string>
     <string name="name1">测试设备1</string>
+    <string name="waiting">please waiting...</string>
+
+    <item type="id" name="tag_first"></item>
+    <item type="id" name="tag_second"></item>
+
 </resources>
