add the setting for password

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -301,4 +301,6 @@
     <item type="id" name="tag_first"></item>
     <item type="id" name="tag_second"></item>
 
+    <string name="app_versionName">1.1</string>
+
 </resources>
