--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -329,4 +329,7 @@
     <string name="str_light">防丢器灯设置</string>
     <string name="str_phone_alert">手机报警设置</string>
     <string name="str_ringtone">铃声选择</string>
+    <string name="str_camera_setting">照相机设置</string>
+    <string name="str_continuous">连拍</string>
+    <string name="str_interval">间隔</string>
 </resources>
