--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="register_textview_warning">注册视为同意蓝牙防丢器的</string>
     <string name="register_textview_protocol">  <a href="">用户协议</a></string>
     <string name="register_protocol">用户协议</string>
-   
+    <string name="str_get_code">获取密码</string>
 
     <!-- menuways -->
     <string name="menuways_bookmenu">手机菜单</string>
@@ -324,7 +324,7 @@
     <string name="str_reenter_pass">Re-enter your password</string>
     <string name="str_no_match">Not match, try again.</string>
 
-    <string name="app_versionName">1.6</string>
+    <string name="app_versionName">1.7</string>
 
     <string name="str_second">second</string>
     <string name="str_stretch">stretch</string>
@@ -339,4 +339,5 @@
     <string name="str_camera_setting">Camera Settings</string>
     <string name="str_continuous">continue</string>
     <string name="str_interval">Interval</string>
+    <string name="str_connect_first">connect device first</string>
 </resources>
