--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -358,4 +358,8 @@
     <string name="str_bluetooth">蓝牙</string>
     <string name="str_permission_prompt">你需要开放访问以下设备权限:</string>
     <string name="str_permission_denied">所需权限被拒绝.</string>
+    <string name="str_gallery">相册</string>
+    <string name="str_pic_source">选择图片来源</string>
+    <string name="str_sd_not_exist">内存卡不存在</string>
+    <string name="str_error_condition">发生意外，无法写入相册</string>
 </resources>
